# maps-of-power

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  STYLE_GUIDE.md  config.py  mop.wsgi  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  runserver.py  thumbnail_generation.py  translations.sh
.antigravitycli/: afc37608-0218-4c61-92e8-2a7f0bf09696.json
.github/workflows/: ci-security.yml
api/: openapi.json
mop/: __init__.py  util.py  views.py
mop/data/: events.py  explore.py  histgeo.py  images.py  institutes.py  literature.py  presentations.py  team.py
mop/data/projects/: barbyz.py  borderzones.py  dgse.py  holdura.py  idcew.py  presentations.py  projects.py  rhr.py  tarsr.py  tib_balkan.py  tracing.py  vlachs.py
mop/display/: events.py  image.py
mop/model/: api_calls.py  entity.py  explore.py  narrative.py  types.py  typetree.py  util.py
mop/static/: package-lock.json  package.json  setup.py
mop/static/css/: color.css  color.scss  datatables.css  fonts.css  network_viz.css  projects_premium.css  style.css
mop/templates/: _events_list.html  about.html  atlas.html  error.html  events.html  explore.html  explore_categories.html  histgeo.html  iiif_viewer.html  imprint.html  layout.html  lectures.html  literature.html  macros.html  navbar.html  project_details.html  projects.html
mop/translations/: babel.cfg  messages.pot
scripts/: format_brackets.py  thumbnail_generation.py  translations.sh
tests/: conftest.py  test_error_handling.py  test_functional.py  test_integration.py  test_narrative.py  test_routes.py
(+24 files in other folders)
