[project]
name = "maps-of-power"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt~=3.2.2",
    "beautifulsoup4==4.13.4",
    "dicttoxml==1.7.15",
    "email-validator==1.3.0",
    "flasgger==0.9.5",
    "flask==2.2.2",
    "flask-babel>=3.0.0",
    "flask-cors==3.0.10",
    "flask-jwt-extended==4.4.4",
    "flask-login==0.6.2",
    "flask-restful==0.3.9",
    "flask-wtf==1.1.1",
    "fuzzywuzzy==0.18.0",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "markdown==3.4.1",
    "markupsafe==2.1.2",
    "numpy==1.24.2",
    "pandas==1.5.3",
    "psycopg2-binary==2.9.5",
    "pyjwt==2.6.0",
    "python-dateutil==2.8.2",
    "python-gettext==4.0",
    "python-levenshtein==0.20.8",
    "rdflib==6.1.1",
    "requests==2.28.1",
    "shapely~=1.8.5",
    "svgwrite~=1.4.3",
    "validators~=0.20.0",
    "wand==0.6.11",
    "werkzeug==2.2.2",
    "wtforms==3.0.1",
    "xmltodict==0.13.0",
]

[dependency-groups]
dev = [
    "pytest==7.2.1",
    "pytest-cov==4.0.0",
]


[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
  "tests",
]
